--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,16 @@ plugins {
     id 'jacoco'
     id 'application'
     id 'checkstyle'
+    id 'com.github.ben-manes.versions' version '0.39.0'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'hexlet.code'
 version = '1.0-SNAPSHOT'
+
+application {
+    mainClass.set("hexlet.code.App")
+}
 
 repositories {
     mavenCentral()
@@ -15,6 +21,11 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation('io.javalin:javalin:6.1.3')
+    implementation('io.javalin:javalin-bundle:6.2.0')
+    implementation('io.javalin:javalin-rendering:6.1.6')
+    implementation('org.slf4j:slf4j-simple:2.0.13')
+    implementation('gg.jte:jte:3.1.12')
 }
 
 test {
@@ -25,4 +36,53 @@ checkstyle {
     toolVersion '10.12.1'
     configFile = file('config/checkstyle/checkstyle.xml')
     configProperties['checkstyle.enableExternalDtdLoad'] = true
+}
+
+
+jacoco {
+    toolVersion = "0.8.11"
+    reportsDirectory = layout.buildDirectory.dir("reports/jacoco")
+}
+
+test {
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+
+shadowJar {
+    archiveBaseName.set('app')
+    archiveVersion.set('1.0-SNAPSHOT')
+    archiveClassifier.set('')
+    mergeServiceFiles()
+}
+
+
+tasks.named('distZip') {
+    dependsOn tasks.named('shadowJar')
+}
+
+tasks.named('distTar') {
+    dependsOn tasks.named('shadowJar')
+}
+
+tasks.named('startScripts') {
+    dependsOn tasks.named('shadowJar')
+}
+
+tasks.named('startShadowScripts') {
+    dependsOn tasks.named('shadowJar')
+}
+
+tasks.named('jar') {
+    enabled = false
+}
+
+tasks.jacocoTestReport {
+    dependsOn(tasks.test)
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir("jacocoHtml")
+    }
 }
