--- a/app/DockerFile
+++ b/app/DockerFile
@@ -1,9 +1,10 @@
-FROM gradle:8.7.0-jdk20
+FROM eclipse-temurin:20-jdk
+ARG GRADLE_VERSION=8.7
 
 WORKDIR /app
 
 COPY /app .
 
-RUN gradle installDist
+RUN gradle shadowJar
 
-CMD ./build/install/app/bin/app
+CMD ["java", "-jar", "build/libs/app-1.0-SNAPSHOT.jar"]
