--- a/app/DockerFile
+++ b/app/DockerFile
@@ -4,7 +4,7 @@ ARG GRADLE_VERSION=8.7
 WORKDIR /app
 
 COPY /app .
-
+RUN gradle installDist
 RUN gradle shadowJar
 
-CMD ["java", "-jar", "build/libs/app-1.0-SNAPSHOT.jar"]
+CMD "java", "-jar", "build/libs/app-1.0-SNAPSHOT.jar"
