fix DockerFile fix build.gradle fix Makefile

--- a/app/Makefile
+++ b/app/Makefile
@@ -1,19 +1,10 @@
 .DEFAULT_GOAL := build-run
 
-setup:
-	gradle wrapper --gradle-version 8.7
-
-clean:
-	./gradlew clean
-
-build:
-	./gradlew clean build
-
-install:
-	./gradlew clean install
-
 run-dist:
 	./build/install/app/bin/app
+
+build:
+	./gradlew build
 
 run:
 	./gradlew run
@@ -21,18 +12,16 @@ run:
 test:
 	./gradlew test
 
+lint:
+	./gradlew checkstyleMain checkstyleTest
+
 report:
 	./gradlew jacocoTestReport
 
-lint:
-	./gradlew checkstyleMain
+build-run:
+	build run
 
-check-deps:
-	./gradlew dependencyUpdates -Drevision=release
-
-update-deps:
-	./gradlew useLatestVersions
-
-build-run: build run
+start:
+	APP_ENV=development ./gradlew run
 
 .PHONY: build
