--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'jacoco'
     id 'application'
     id 'checkstyle'
-    id 'com.github.ben-manes.versions' version '0.39.0'
+    id 'com.github.ben-manes.versions' version '0.51.0'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
@@ -41,7 +41,7 @@ checkstyle {
 
 jacoco {
     toolVersion = "0.8.11"
-    reportsDirectory = layout.buildDirectory.dir("reports/jacoco")
+
 }
 
 test {
@@ -49,40 +49,8 @@ test {
     finalizedBy jacocoTestReport
 }
 
-
-shadowJar {
-    archiveBaseName.set('app')
-    archiveVersion.set('1.0-SNAPSHOT')
-    archiveClassifier.set('')
-    mergeServiceFiles()
-}
-
-
-tasks.named('distZip') {
-    dependsOn tasks.named('shadowJar')
-}
-
-tasks.named('distTar') {
-    dependsOn tasks.named('shadowJar')
-}
-
-tasks.named('startScripts') {
-    dependsOn tasks.named('shadowJar')
-}
-
-tasks.named('startShadowScripts') {
-    dependsOn tasks.named('shadowJar')
-}
-
-tasks.named('jar') {
-    enabled = false
-}
-
 tasks.jacocoTestReport {
-    dependsOn(tasks.test)
     reports {
-        xml.required = true
-        csv.required = false
-        html.outputLocation = layout.buildDirectory.dir("jacocoHtml")
+        xml.required.set(true)
     }
 }
