step 3 project add BaseRepo, schema.sql, model url.java

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'checkstyle'
     id 'com.github.ben-manes.versions' version '0.51.0'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id("io.freefair.lombok") version "8.6"
 }
 
 group = 'hexlet.code'
@@ -26,6 +27,8 @@ dependencies {
     implementation('io.javalin:javalin-rendering:6.1.6')
     implementation('org.slf4j:slf4j-simple:2.0.13')
     implementation('gg.jte:jte:3.1.12')
+    implementation("com.zaxxer:HikariCP:5.1.0")
+    implementation('com.h2database:h2:2.2.224')
 }
 
 test {
