--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation('gg.jte:jte:3.1.12')
     implementation("com.zaxxer:HikariCP:5.1.0")
     implementation('com.h2database:h2:2.2.224')
+    implementation('org.postgresql:postgresql:42.7.3')
 }
 
 test {
