--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation("com.zaxxer:HikariCP:5.1.0")
     implementation('com.h2database:h2:2.2.224')
     implementation('org.postgresql:postgresql:42.7.3')
+    implementation("gg.jte:jte:3.1.13")
 }
 
 test {
