--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation("org.assertj:assertj-core:3.26.3")
+    testImplementation(platform("org.junit:junit-bom:5.10.1"))
+    testImplementation("org.junit.jupiter:junit-jupiter")
+
     implementation('io.javalin:javalin:6.2.0')
     implementation('io.javalin:javalin-bundle:6.2.0')
     implementation('io.javalin:javalin-rendering:6.1.6')
